Data pipeline implemented

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6499e7e4",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7a303584",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "28ead600",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3cb18527",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "88b198db",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
        "max         1.000000    72.000000      118.750000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e258ddf4",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
        "((7043, 21), None)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6075bdb6",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8b19cae5",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "65d949ed",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ee4f8214",
    "metadata": {},
    "outputs": [],
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d3543d33",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3d09a195",
    "metadata": {},
    "outputs": [],
@@ -1544,6 +1544,46 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "0c4d2222",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SeniorCitizen                              0\n",
+       "Partner                                    0\n",
+       "Dependents                                 0\n",
+       "PhoneService                               0\n",
+       "MultipleLines                              0\n",
+       "InternetService                            0\n",
+       "Contract                                   0\n",
+       "PaperlessBilling                           0\n",
+       "MonthlyCharges                             0\n",
+       "TotalCharges                               0\n",
+       "Churn                                      0\n",
+       "Add-ons                                    0\n",
+       "TenureGroup                                0\n",
+       "gender_Female                              0\n",
+       "gender_Male                                0\n",
+       "PaymentMethod_Bank transfer (automatic)    0\n",
+       "PaymentMethod_Credit card (automatic)      0\n",
+       "PaymentMethod_Electronic check             0\n",
+       "PaymentMethod_Mailed check                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encoded.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "cd4b736b",
    "metadata": {},
    "outputs": [],
@@ -1557,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "f752d5a2",
    "metadata": {},
    "outputs": [
@@ -2042,7 +2082,7 @@
        "14                           0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2053,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "2ad6c735",
    "metadata": {},
    "outputs": [
@@ -2095,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "7f7b15a2",
    "metadata": {},
    "outputs": [],
@@ -2107,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "e4bccfe4",
    "metadata": {},
    "outputs": [
@@ -2117,7 +2157,7 @@
        "((5616, 18), (5616,), (1405, 18), (1405,))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2130,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "58a8cb7a",
    "metadata": {},
    "outputs": [
@@ -2140,7 +2180,7 @@
        "((8222, 18), (8222,), (1405, 18), (1405,))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2154,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "75d7e772",
    "metadata": {},
    "outputs": [],
